<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout_dl_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.main.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp">
        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:onClick="customOnClick"
            android:src="@drawable/cgv" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tl_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_tab_background"
        app:tabIndicatorColor="@color/main_tab_indicator">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_tab_home" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_tab_event" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_tab_fastorder" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_tab_playzone" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_tab_my" />
    </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_vp_viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>

    </LinearLayout>
    <include
        layout="@layout/main_drawer"/>
</androidx.drawerlayout.widget.DrawerLayout>