<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.main.moviedetail.MovieDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/movie_detail_tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp">

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/movie_detail_sub_Image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movie_detail_tv_book_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_book_rate"
                android:textColor="@color/movie_detail_book_rate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_release_date"
                android:textColor="@color/movie_detail_release_date"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/movie_detail_main_img"
            android:layout_width="40dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_detail_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/movie_detail_tv_en_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:weightSum="4">
        <ImageView
            android:id="@+id/movie_detail_iv_like"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/hearticon"/>
        <ImageView
            android:id="@+id/movie_detail_iv_alram_release_date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/alramicon"/>
        <ImageView
            android:id="@+id/movie_detail_iv_share"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/shreicon"/>
        <ImageView
            android:id="@+id/movie_detail_iv_ticketing"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/reserveicon"/>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="#d3d3d3" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/movie_detail_tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:tabIndicatorColor="@color/main_tab_indicator">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_tab_related_news" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_tab_review" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_tab_information" />


    </com.google.android.material.tabs.TabLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_centerInParent="true"
        android:background="@color/gam_fill" />

    <com.example.mock_cgv.src.main.home.NonSwipeViewPager
        android:id="@+id/movie_detail_non_swipe_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.example.mock_cgv.src.main.home.NonSwipeViewPager>


</LinearLayout>